<resources>
    <string name="app_name">Nerd\'s Hub</string>
    <string name="dashboard">Dashboard</string>
    <string name="Favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourite_fragment">Favourite Fragment</string>
    <string name="about_app_fragmment">About App Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_the_book">About the Book</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="hello_this_is_a_book">Hello This is a book</string>
    <string name="_4_5">4.5</string>
    <string name="rs_299">Rs 299</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="name_of_the_book">Name of the Book</string>
    <string name="hello_world">Hello World</string>
    <string name="android_inc">Android Inc</string>
    <string name="hello_world1">Hello World</string>
    <string name="rs_2991">Rs 299</string>
    <string name="action_sort">Sort</string>
</resources>