<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/favRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeeeee">

        <ImageView
            android:id="@+id/imgIconBook"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/book_icon" />
    </RelativeLayout>
    <TextView
        android:id="@+id/txtfavBookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/favRelativeLayout"
        android:text="@string/hello_world1"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txtfavAuthorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtfavBookName"
        android:layout_marginTop="2dp"
        android:layout_centerInParent="true"
        android:text="@string/android_inc"
        android:textSize="14sp"/>
   <TextView
       android:id="@+id/txtfavBookPrice"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/txtfavAuthorName"
       android:layout_marginTop="2dp"
       android:layout_centerInParent="true"
       android:text="@string/rs_2991"
       android:textColor="@color/Price_Green"
       android:textSize="14sp"/>
    <TextView
        android:id="@+id/txtfavBookRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtfavBookPrice"
        android:layout_centerInParent="true"
        android:drawablePadding="4dp"
        android:padding="4dp"
        android:text="@string/_4_5"
        android:textColor="#ffc828"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/fav_icon" />
</RelativeLayout>
</androidx.cardview.widget.CardView>