<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DescriptionActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/descToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        app:titleTextColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/descToolbar"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/descContent"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/imgBookimage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/name_of_the_book"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtBookAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtBookName"
                        android:padding="8dp"
                        android:text="@string/name_of_the_author"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtBookAuthor"
                        android:padding="8dp"
                        android:text="@string/rs_299"
                        android:textColor="#357a38"
                        android:textSize="15sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtBookRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:drawablePadding="4dp"
                    android:padding="4dp"
                    android:text="@string/_4_5"
                    android:textColor="#ffc828"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/fav_icon" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/descContent">
                <TextView
                    android:id="@+id/txtAboutTheBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="6dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/about_the_book"
                    android:layout_marginTop="4dp"/>
                <TextView
                    android:id="@+id/txtBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtAboutTheBook"
                    android:layout_margin="10dp"
                    android:padding="6dp"
                    android:text="@string/hello_this_is_a_book"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/design_default_color_primary"
        android:text="@string/add_to_favourites"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="19sp"/>
    <RelativeLayout
        android:id="@+id/progressBarDesc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <ProgressBar
            android:id="@+id/progressDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>